[project]
name = "roodle"
version = "0.1.0"
description = "Moodle tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4~=4.12",
    "lxml>=5.3.0",
    "lz4~=4.3",
    "pandas>=2.2.2",
    "platformdirs>=4.2.2",
    "pyparsing~=3.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
